Fix tab size and overflow-x for code blocks

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -19,3 +19,10 @@ body
 	margin-bottom: 10px !important
 strong
 	font-weight: 600 !important
+pre, code
+	tab-size: 4 !important
+	-moz-tab-size: 4 !important
+	-o-tab-size: 4 !important
+	-webkit-tab-size: 4 !important
+pre code, pre, code
+	overflow-x: scroll !important
